kubeadm-v1.10/Deploy/Traefik/ingress_files/grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-grafana
  namespace: monitoring
spec:
  rules:
  - host: traefik-grafana.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
