kubeadm-v1.10/Deploy/Traefik/ingress_files/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: default
spec:
  rules:
  - host: traefik-nginx.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx
          servicePort: 80
  - host: traefik-apache.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-apache
          servicePort: 80
  - host: traefik-nodeport.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-nodeport
          servicePort: 88
